include/altdss/capi/dss.h

    /*! 
    Voltages at each conductor in magnitude, angle form as array of doubles.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_VoltagesMagAng(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_VoltagesMagAng but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_VoltagesMagAng_GR(void);
    /*! 
    Returns true if the current active element is isolated.
    Note that this only fetches the current value. See also the Topology interface.

    (API Extension)
    */
    ALTDSS_CAPI_DLL uint16_t CktElement_Get_IsIsolated(void);
    /*! 
    Returns an array with the total powers (complex, kVA) at ALL terminals of the active circuit element.
    */
    ALTDSS_CAPI_DLL void CktElement_Get_TotalPowers(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_TotalPowers but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_TotalPowers_GR(void);
    /*! 
    Gets the name of the active state variable if any, otherwise, returns and empty string
    */
    ALTDSS_CAPI_DLL const char* CktElement_Get_VariableName(void);
    /*!
    Sets the name of the active state variable for using with the VariableValue property
    */
    ALTDSS_CAPI_DLL void CktElement_Set_VariableName(const char* Value);
    
    /*!
    Gets the  present value for the active state variable. If there no active variable, returns a error message.
    */
    ALTDSS_CAPI_DLL double CktElement_Get_VariableValue(void);
    
    /*!
    Sets the given value to be the present value for the active state variable. If there no active variable, returns a error message.
    */
    ALTDSS_CAPI_DLL void CktElement_Set_VariableValue(double Value);
    /*!
    Gets the index of the active state variable if any, otherwise, returns -1
    */
    ALTDSS_CAPI_DLL int32_t CktElement_Get_VariableIdx(void);
    /*!
    Activates a  state variable by index for using with the VariableValue property
    */
    ALTDSS_CAPI_DLL void CktElement_Set_VariableIdx(int32_t Value);
    /*! 
    Array of integers, a copy of the internal NodeRef of the CktElement.
    
    (API Extension)
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeRef(int32_t** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as CktElement_Get_NodeRef but using the global buffer interface for results
    */
    ALTDSS_CAPI_DLL void CktElement_Get_NodeRef_GR(void);
    ALTDSS_CAPI_DLL void* CktElement_Get_Pointer(void);