src/CAPI/CAPI_CktElement.pas


procedure CktElement_Get_VoltagesMagAng_GR(); CDECL;
// Same as CktElement_Get_VoltagesMagAng but uses global result (GR) pointers
begin
    CktElement_Get_VoltagesMagAng(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
function CktElement_Get_IsIsolated(): TAPIBoolean; CDECL;
var
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) then
    begin
        Result := FALSE;
        Exit;
    end;

    Result := Flg.IsIsolated in elem.Flags;
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_TotalPowers(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    cBuffer: pComplexArray;
    myInit,
    myEnd,
    j,
    i,
    iV: Integer;
    buffer: Array of Complex;
    Result: PDoubleArray0;
    elem: TDSSCktElement;
begin
    if InvalidCktElement(DSSPrime, elem) or MissingSolution(DSSPrime) or (elem.NodeRef = NIL) then
    begin
        DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Exit;
    end;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2 * elem.Nterms);
    cBuffer := Allocmem(2 * SizeOf(Double) * elem.NConds * elem.Nterms);
    elem.GetPhasePower(cBuffer);
    iV := 0;
    SetLength(buffer, elem.Nterms);
    for j := 1 to elem.Nterms do
    Begin
        buffer[j - 1] := 0;
        myInit := (j - 1) * elem.NConds + 1;
        myEnd := elem.NConds * j;
        for i := myInit to myEnd do
        begin
            buffer[j - 1] := buffer[j - 1] + cBuffer[i];
        end;
        Result[iV + 0] := buffer[j - 1].re * 0.001;
        Result[iV + 1] := buffer[j - 1].im * 0.001; 
        Inc(iV, 2);
    End;
    Reallocmem(cBuffer,0);
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_TotalPowers_GR(); CDECL;
// Same as CktElement_Get_TotalPowers but uses global result (GR) pointers
begin
    CktElement_Get_TotalPowers(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;
//------------------------------------------------------------------------------
procedure CktElement_Get_NodeRef(var ResultPtr: PInteger; ResultCount: PAPISize); CDECL;    
var
    elem: TDSSCktElement;
begin
    DefaultResult(ResultPtr, ResultCount);
    if InvalidCktElement(DSSPrime, elem) then 
        Exit;
        
    if elem.NodeRef = NIL then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, _('NodeRef is not populated for the current element!'), 97801);
        end;
        Exit;
    end;
    DSS_RecreateArray_PInteger(ResultPtr, ResultCount, elem.Yorder);
    Move(elem.NodeRef[1], ResultPtr^, elem.Yorder * SizeOf(Integer));
end;

procedure CktElement_Get_NodeRef_GR(); CDECL;
// Same as CktElement_Get_NodeRef but uses global result (GR) pointers
begin
    CktElement_Get_NodeRef(DSSPrime.GR_DataPtr_PInteger, @DSSPrime.GR_Counts_PInteger[0])
end;
//------------------------------------------------------------------------------
function CktElement_Get_VariableName(): PAnsiChar; CDECL;
var
    cktelem: TDSSCktElement;
    elem: TPCElement;
begin
    Result := NIL;
    if InvalidCktElement(DSSPrime, cktelem, True) then
        Exit;

    elem := TPCElement(cktelem);
    if (DSSPrime.API_VarIdx <= 0) or (DSSPrime.API_VarIdx > elem.NumVariables) then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid variable index %d for "%s"', [DSSPrime.API_VarIdx, elem.FullName], 97802);
        Exit;
    end;
    Result := DSS_GetAsPAnsiChar(DSSPrime, elem.VariableName(DSSPrime.API_VarIdx));
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_VariableName(const Value: PAnsiChar); CDECL;
var
    cktelem: TDSSCktElement;
    elem: TPCElement;
begin
    if InvalidCktElement(DSSPrime, cktelem, True) then
    begin
        DSSPrime.API_VarIdx := -1;
        Exit;
    end;
    elem := TPCElement(cktelem);
    DSSPrime.API_VarIdx := elem.LookupVariable(Value);
    if (DSSPrime.API_VarIdx <= 0) or (DSSPrime.API_VarIdx > elem.NumVariables) then
        DoSimpleMsg(DSSPrime, 'Invalid variable name "%s" for "%s"', [Value, elem.FullName], 100001);
end;
//------------------------------------------------------------------------------
function CktElement_Get_VariableValue(): Double; CDECL;
var
    cktelem: TDSSCktElement;
    elem: TPCElement;
begin
    Result := 0;
    if InvalidCktElement(DSSPrime, cktelem, True) then
        Exit;

    elem := TPCElement(cktelem);
    if (DSSPrime.API_VarIdx <= 0) or (DSSPrime.API_VarIdx > elem.NumVariables) then
    begin
        DoSimpleMsg(DSSPrime, 'Invalid variable index %d for "%s"', [DSSPrime.API_VarIdx, elem.FullName], 100002);
        Exit;
    end;
    Result := elem.Variable[DSSPrime.API_VarIdx];
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_VariableValue(Value: Double); CDECL;
var
    cktelem: TDSSCktElement;
    elem: TPCElement;
begin
    if InvalidCktElement(DSSPrime, cktelem, True) then
        Exit;

    elem := TPCElement(cktelem);
    if (DSSPrime.API_VarIdx <= 0) or (DSSPrime.API_VarIdx > elem.NumVariables) then
    begin
        if DSS_CAPI_EXT_ERRORS then
            DoSimpleMsg(DSSPrime, 'Invalid variable index %d for "%s"', [DSSPrime.API_VarIdx, elem.FullName], 100002);
        Exit;
    end;
    elem.Variable[DSSPrime.API_VarIdx] := Value;
end;
//------------------------------------------------------------------------------
function CktElement_Get_VariableIdx(): Integer; CDECL;
var
    elem: TDSSCktElement;
begin
    Result := -1;
    if InvalidCktElement(DSSPrime, elem, True) then
        Exit;
    Result := DSSPrime.API_VarIdx;
end;
//------------------------------------------------------------------------------
procedure CktElement_Set_VariableIdx(Value: Integer); CDECL;
var
    cktelem: TDSSCktElement;
    elem: TPCElement;
begin
    if InvalidCktElement(DSSPrime, cktelem, True) then
    begin
        DSSPrime.API_VarIdx := -1;
        Exit;
    end;

    elem := TPCElement(cktelem);
    if (Value <= 0) or (Value > elem.NumVariables) then
    begin
        if DSS_CAPI_EXT_ERRORS then
            DoSimpleMsg(DSSPrime, 'Invalid variable index %d for "%s"', [DSSPrime.API_VarIdx, elem.FullName], 100003);
        Exit;
    end;
    DSSPrime.API_VarIdx := Value;
end;
//------------------------------------------------------------------------------
function Obj_CktElement_MaxCurrent(obj: TDSSCktElement; terminalIdx: Integer): Double; CDECL;
begin
    Result := obj.MaxCurrent[terminalIdx];
end;
//------------------------------------------------------------------------------
procedure Obj_Circuit_Set_ActiveCktElement(obj: TDSSCktElement); CDECL;
begin
    obj.DSS.ActiveCircuit.ActiveCktElement := obj;
end;
//------------------------------------------------------------------------------
function CktElement_Get_Pointer(): Pointer; CDECL;
begin
    Result := NIL;
    if InvalidCircuit(DSSPrime) then
        Exit;
    Result := DSSPrime.ActiveCircuit.ActiveCktElement
end;
//------------------------------------------------------------------------------
end.
